Vertical media queries to fix nav visibility on short & wide laptops

--- a/wp-content/themes/badracket/sass/_breakpoints.scss
+++ b/wp-content/themes/badracket/sass/_breakpoints.scss
@@ -43,6 +43,13 @@ $name4:  992px;
 
 }
 
+
+@mixin below-height($height) {
+  @media screen and (max-height: $height) {
+    @content;
+  }
+}
+
 @mixin tablet() {
   @media (max-width : 1024px) and (min-width : 768px) { @content; }
 }
